# test

./: .gitignore  CMakeLists.txt
hello-libretro/: CMakeLists.txt
hello-libretro/src/: libretro.cpp
hello-libretro/tests/: CMakeLists.txt  hello-libretro-test.cpp
